--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -511,25 +511,12 @@
                                                                     
                                                                     <DataTemplate x:Key="MultiTabViewTemplate">
                                                                         <TabControl ItemsSource="{Binding Tabs}" SelectedItem="{Binding SelectedTab, Mode=TwoWay}"
-                                                                                    ItemContainerStyle="{StaticResource GroupInternalTabItemStyle}"
-                                                                                    Style="{StaticResource GroupInternalTabControlStyle}">
+                                                                            ItemContainerStyle="{StaticResource GroupInternalTabItemStyle}"
+                                                                            Style="{StaticResource GroupInternalTabControlStyle}">
                                                                             <TabControl.ItemTemplate>
                                                                                 <DataTemplate DataType="{x:Type local:WorkflowGroupTabViewModel}">
-                                                                                    <DockPanel>
-                                                                                        <Border DockPanel.Dock="Bottom" Height="2" Margin="2,0,2,-2" Background="{Binding HighlightColor, Converter={StaticResource HexToBrushConverter}}">
-                                                                                            <Border.Style>
-                                                                                                <Style TargetType="Border">
-                                                                                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                                                                                    <Style.Triggers>
-                                                                                                        <DataTrigger Binding="{Binding HighlightColor, Converter={StaticResource StringToIsNotNullOrEmptyConverter}}" Value="True">
-                                                                                                            <Setter Property="Visibility" Value="Visible"/>
-                                                                                                        </DataTrigger>
-                                                                                                    </Style.Triggers>
-                                                                                                </Style>
-                                                                                            </Border.Style>
-                                                                                        </Border>
-                                                                                        <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Margin="0,0,0,2" />
-                                                                                    </DockPanel>
+                                                                                    <!-- The Tab Header is now just the text, clean and simple -->
+                                                                                    <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Margin="0,0,0,2" />
                                                                                 </DataTemplate>
                                                                             </TabControl.ItemTemplate>
                                                                             <TabControl.ContentTemplate>
