--- a/Comfizen/Views/UIConstructor.xaml
+++ b/Comfizen/Views/UIConstructor.xaml
@@ -406,12 +406,15 @@
                                                                         <EventSetter Event="DragOver" Handler="GroupSubTabItem_DragOver"/>
                                                                         <EventSetter Event="DragLeave" Handler="GroupSubTabItem_DragLeave"/>
                                                                         <EventSetter Event="PreviewMouseLeftButtonDown" Handler="GroupSubTabItem_PreviewMouseLeftButtonDown"/>
+                                                                        <!-- ADDED: New event handler for mouse move -->
+                                                                        <EventSetter Event="PreviewMouseMove" Handler="GroupSubTabItem_PreviewMouseMove"/>
                                                                     </Style>
                                                                 </TabControl.Resources>
                                                                 <TabControl.ItemTemplate>
                                                                     <DataTemplate DataType="{x:Type local:WorkflowGroupTabViewModel}">
                                                                         <Grid MouseRightButtonUp="ShowColorPickerPopup">
-                                                                            <Border x:Name="SubTabDropIndicatorBefore" Height="2" Background="{StaticResource PrimaryAccentBrush}" CornerRadius="1" Margin="-10,0,-10,2" VerticalAlignment="Top" Visibility="Collapsed" IsHitTestVisible="False"/>
+                                                                            <!-- Vertical indicator on the left -->
+                                                                            <Border x:Name="SubTabDropIndicatorBefore" Width="2" Background="{StaticResource PrimaryAccentBrush}" CornerRadius="1" Margin="-2,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Visibility="Collapsed" IsHitTestVisible="False"/>
                                                                             
                                                                             <StackPanel Orientation="Horizontal">
                                                                                 <Border Width="8" Height="8" CornerRadius="4" Margin="0,0,6,0" VerticalAlignment="Center"
@@ -433,7 +436,9 @@
 
                                                                             <TextBox Text="{Binding Name, UpdateSourceTrigger=Explicit}" Style="{StaticResource InlineEditTextBox}"
                                                                                      Visibility="{Binding IsRenaming, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                                                            <Border x:Name="SubTabDropIndicatorAfter" Height="2" Background="{StaticResource PrimaryAccentBrush}" CornerRadius="1" Margin="-10,2,-10,0" VerticalAlignment="Bottom" Visibility="Collapsed" IsHitTestVisible="False"/>
+                                                                            
+                                                                            <!-- Vertical indicator on the right -->
+                                                                            <Border x:Name="SubTabDropIndicatorAfter" Width="2" Background="{StaticResource PrimaryAccentBrush}" CornerRadius="1" Margin="0,0,-2,0" HorizontalAlignment="Right" VerticalAlignment="Stretch" Visibility="Collapsed" IsHitTestVisible="False"/>
                                                                         </Grid>
                                                                     </DataTemplate>
                                                                 </TabControl.ItemTemplate>
